--- a/bookTheHotel.html
+++ b/bookTheHotel.html
@@ -10,7 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Hotel Details</title>
+    <title>Book The Hotel</title>
   </head>
   <body>
     <div id="wrapper">
@@ -457,9 +457,6 @@
       <section class="travel-view py-4">
         <div class="container">
           <div class="row gap-4">
-            <h4 class="travel-view-para">
-              | <a href=""> House of Oglodi by Rishi Khanna </a> |
-            </h4>
             <div
               id="carousel_indicators"
               class="carousel slide"
@@ -580,75 +577,249 @@
           </div>
         </div>
       </section>
-      <section class="package-discription">
-        <div class="diamond-box">
-          <div class="diamond-box-tags">
-            <span class="diamond">
-              <i class="fa fa-diamond"></i>
-              <span>Hidden gem</span>
-            </span>
-            <span class="diamond">
-              <i class="fa fa-inr"></i>
-              <span>5,000</span>
-            </span>
-            <span class="diamond">
-              <i class="fa fa-star"></i>
-              <span>Ratings</span>
-            </span>
+
+      <section class="checkout-hotel">
+        <div class="checkout">
+          <div class="row">
+            <div class="col-6 check-in">
+              <p>CHECK-IN AND CHECK-OUT DATES</p>
+              <input type="date" name="" id="" class="check-in-date" />
+              <div class="hotel-room">
+                <div>
+                  <h5>Room 1</h5>
+                </div>
+                <div class="adult">
+                  <span>Adult</span>
+                  <select name="" id="">
+                    <option value="">1</option>
+                    <option value="">2</option>
+                    <option value="">3</option>
+                    <option value="">4</option>
+                  </select>
+                </div>
+                <div class="kids">
+                  <span>Kids</span>
+                  <select name="" id="">
+                    <option value="">1</option>
+                    <option value="">2</option>
+                    <option value="">3</option>
+                    <option value="">4</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 hotel-room-check">
+              <p>Rooms</p>
+              <select name="" id="">
+                <option value="">1 Room</option>
+                <option value="">2 Room</option>
+                <option value="">3 Room</option>
+                <option value="">4 Room</option>
+                <option value="">5 Room</option>
+                <option value="">6 Room</option>
+                <option value="">7 Room</option>
+                <option value="">8 Room</option>
+              </select>
+            </div>
           </div>
-          <div class="diamond-box-button">
-            <button class="btn btn-danger">Book Now</button>
-          </div>
-        </div>
-        <h2>House of Oglodi by Rishi Khanna</h2>
-        <div class="about-hotel">
-          <span> 8 Guest</span> | <span>4 Bedroom</span> |
-          <span> 3 Bathroom</span> |
-          <span>Private Pool</span>
-        </div>
-        <div class="hotel-discription">
-          <h3>Description</h3>
-          <div class="line"></div>
-          <div class="discription-start">
-            <p>
-              Situated in Delhi, 16 km from Kingdom of Dreams, Haritma Resort
-              features accommodation with an outdoor swimming pool, free private
-              parking, a garden and a restaurant. Boasting family rooms, this
-              property also provides guests with a sun terrace. The
-              accommodation provides room service and a 24-hour front desk for
-              guests.Situated in Delhi, 16 km from Kingdom of Dreams, Haritma
-              Resort features accommodation with an outdoor swimming pool, free
-              private parking, a garden and a restaurant. Boasting family rooms,
-              this property also provides guests with a sun terrace. The
-              accommodation provides room service and a 24-hour front desk for
-              guests.
-            </p>
-            <p>
-              Situated in Delhi, 16 km from Kingdom of Dreams, Haritma Resort
-              features accommodation with an outdoor swimming pool, free private
-              parking, a garden and a restaurant. Boasting family rooms, this
-              property also provides guests with a sun terrace. The
-              accommodation provides room service and a 24-hour front desk for
-              guests.
-            </p>
-            <p>
-              Situated in Delhi, 16 km from Kingdom of Dreams, Haritma Resort
-              features accommodation with an outdoor swimming pool, free private
-              parking, a garden and a restaurant. Boasting family rooms, this
-              property also provides guests with a sun terrace. The
-              accommodation provides room service and a 24-hour front desk for
-              guests.
-            </p>
-            <p>
-              MG Road is 17 km from the hotel, while Qutub Minar is 25 km from
-              the property. The nearest airport is Delhi International Airport,
-              9 km from Haritma Resort.
-            </p>
+          <div class="hotel-checkout-button">
+            <button type="submit">Check Room Rates</button>
           </div>
         </div>
       </section>
+      <section class="check-rates">
+        <div class="check-rates-container">
+          <div class="check-rates-box">
+            <div class="check-rates-image">
+              <img src="image/hotel/1.avif" alt="" />
+            </div>
+            <div class="check-rates-content">
+              <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
+              <a href="">
+                <span>View Room Details And Amenities</span>
+              </a>
+            </div>
+            <div class="check-rates-button">
+              <button type="submit">Check Rates</button>
+            </div>
+          </div>
+          <div class="check-rates-box">
+            <div class="check-rates-image">
+              <img src="image/hotel/1.avif" alt="" />
+            </div>
+            <div class="check-rates-content">
+              <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
+              <a href="">
+                <span>View Room Details And Amenities</span>
+              </a>
+            </div>
+            <div class="check-rates-button">
+              <button type="submit">Check Rates</button>
+            </div>
+          </div>
+          <div class="check-rates-box">
+            <div class="check-rates-image">
+              <img src="image/hotel/1.avif" alt="" />
+            </div>
+            <div class="check-rates-content">
+              <p>DELUXE DOUBLE ROOM, 1 DOUBLE BED, NON SMOKING</p>
+              <a href="">
+                <span>View Room Details And Amenities</span>
+              </a>
+            </div>
+            <div class="check-rates-button">
+              <button type="submit">Check Rates</button>
+            </div>
+          </div>
 
-      <section class="package-details"></section>
+          <div class="check-about-hotel">
+            <h3>ABOUT THE HOTEL</h3>
+            <div class="check-about-hotel-box">
+                <h5>Hotel Location & Nearby Attractions</h5>
+                <p>Located in Shimla, Hotel Baljees Regency is within a 15-minute walk of Kali Bari Temple and Himalayan Aviary. This hotel is 5.8 mi (9.3 km) from Mall Road and 0.8 mi (1.2 km) from Sidh Baba Ka Mandir.</p>
+                <h5>Popular Hotel Amenities and Features</h5>
+                <p>Make use of convenient amenities such as complimentary wireless Internet access, tour/ticket assistance, and a banquet hall.</p>
+                <h5>Business, Other Amenities</h5>
+                <p>Featured amenities include complimentary newspapers in the lobby, dry cleaning/laundry services, and a 24-hour front desk. Limited parking is available onsite.</p>
+                <h5>Restaurants, Bars, Lounge & Dining options</h5>
+                <p>Satisfy your appetite for lunch or dinner at the hotel's restaurant, or stay in and take advantage of the 24-hour room service. Wrap up your day with a drink at the bar/lounge. A complimentary continental breakfast is served daily from 8 AM to 10 AM.</p>
+                <h5>Hotel Accommodations and Guest Rooms</h5>
+                <p>Make yourself at home in one of the 30 guestrooms. Complimentary wireless Internet access keeps you connected, and cable programming is available for your entertainment. Bathrooms have showers and complimentary toiletries. Conveniences include safes and desks, and housekeeping is provided daily.</p>
+
+                <p style="color:gray
+                ">Hotel Baljees Regency Hotel Amenities</p>
+                <div class="check-hotel-container">
+                    <div class="check-hotel-box">
+                        <h5>Accessibility</h5>
+                        <ul>
+                            <li>
+                                Wheelchair Accessible bathroom
+                            </li>
+                        </ul>
+                        <h5>Breakfast Services</h5>
+                        <ul>
+                            <li>
+                                Complimentary Breakfast
+                            </li>
+                        </ul>
+                        <h5>Business, Conference & Meetings</h5>
+                        <ul>
+                            <li>
+                                Banquet hall on site
+                            </li>
+                        </ul>
+                        <h5>General Amenities</h5>
+                        <ul>
+                            <li>Daily</li>
+                                <li>
+                                    Free continental breakfast
+                                </li>
+                        </ul>
+                    </div>
+                    <div class="check-hotel-box">
+                        <h5>Accessibility</h5>
+                        <ul>
+                            <li>
+                                Wheelchair Accessible bathroom
+                            </li>
+                        </ul>
+                        <h5>Breakfast Services</h5>
+                        <ul>
+                            <li>
+                                Complimentary Breakfast
+                            </li>
+                        </ul>
+                        <h5>Business, Conference & Meetings</h5>
+                        <ul>
+                            <li>
+                                Banquet hall on site
+                            </li>
+                        </ul>
+                        <h5>General Amenities</h5>
+                        <ul>
+                            <li>Daily</li>
+                                <li>
+                                    Free continental breakfast
+                                </li>
+                        </ul>
+                    </div>
+                    <div class="check-hotel-box">
+                        <h5>Accessibility</h5>
+                        <ul>
+                            <li>
+                                Wheelchair Accessible bathroom
+                            </li>
+                        </ul>
+                        <h5>Breakfast Services</h5>
+                        <ul>
+                            <li>
+                                Complimentary Breakfast
+                            </li>
+                        </ul>
+                        <h5>Business, Conference & Meetings</h5>
+                        <ul>
+                            <li>
+                                Banquet hall on site
+                            </li>
+                        </ul>
+                        <h5>General Amenities</h5>
+                        <ul>
+                            <li>Daily</li>
+                                <li>
+                                    Free continental breakfast
+                                </li>
+                        </ul>
+                    </div>
+                    <div class="check-hotel-box">
+                        <h5>Accessibility</h5>
+                        <ul>
+                            <li>
+                                Wheelchair Accessible bathroom
+                            </li>
+                        </ul>
+                        <h5>Breakfast Services</h5>
+                        <ul>
+                            <li>
+                                Complimentary Breakfast
+                            </li>
+                        </ul>
+                        <h5>Business, Conference & Meetings</h5>
+                        <ul>
+                            <li>
+                                Banquet hall on site
+                            </li>
+                        </ul>
+                        <h5>General Amenities</h5>
+                        <ul>
+                            <li>Daily</li>
+                                <li>
+                                    Free continental breakfast
+                                </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+          </div>
+
+          <div class="hotel-location">
+            <h3>HOTEL LOCATION</h3>
+            <div class="row">
+                <div class="col-md-3 col-sm-5">
+                    <div class="map-contant">
+                        <p>Distances are displayed to the nearest 0.1 mile and kilometer. <br> </p><p>Kali Bari Temple - 0.5 km / 0.3 mi <br> Himalayan Aviary - 1.1 km / 0.7 mi <br> Mall Road - 1.1 km / 0.7 mi <br> Gaiety Heritage Cultural Complex - 1.2 km / 0.7 mi <br> Sidh Baba Ka Mandir - 1.2 km / 0.8 mi <br> Kotkhai Palace - 1.2 km / 0.8 mi <br> Lankra Veer Temple - 1.2 km / 0.8 mi <br> Mahamai Temple - 1.2 km / 0.8 mi <br> Gaiety Theater - 1.3 km / 0.8 mi <br> Gurkha Gate - 1.3 km / 0.8 mi <br> Shimla Mall - 1.4 km / 0.9 mi <br> Christ Church - 1.5 km / 0.9 mi <br> State Museum - 1.6 km / 1 mi <br> Shimla Heritage Walk - 1.7 km / 1.1 mi <br> Lakkar Bazar - 1.8 km / 1.1 mi <br> </p><p>The nearest airports are:<br>Chandigarh (IXC) - 116.8 km / 72.6 mi<br> Shimla (SLV) - 19.2 km / 12 mi<br> 
+                    </div>
+                </div>
+                <div class="col-9">
+                    <iframe id="map-canvas" class="map_part" width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=1%20Grafton%20Street,%20Dublin,%20Ireland+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                </div>
+            </div>
+
+
+
+            
+      </section>
+
       <footer>
         <div class="footer-container">
           <div class="footer-box">
@@ -702,7 +873,6 @@
             </a>
           </div>
         </div>
-        <div></div>
       </footer>
     </div>
     <script
