--- a/hotels.html
+++ b/hotels.html
@@ -457,7 +457,6 @@
       <section class="travel-view py-4">
         <div class="container">
           <div class="row gap-4">
-            <h4 class="travel-view-para">| <a href="">Hotel Type</a> |</h4>
             <div
               id="carousel_indicators"
               class="carousel slide"
@@ -548,100 +547,217 @@
           <div class="col-12">
             <div class="package-image-box">
               <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/1.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
+                <img src="image/hotel/1.avif" alt="" />
+                <div class="package-overlay">
+                  <div class="overlay-data">
+                    <span>Delhi</span>
+                    <p>Laxmi Nagar</p>
                   </div>
-                </a>
+                </div>
               </div>
               <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/2.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
+                <img src="image/hotel/2.avif" alt="" />
+                <div class="package-overlay">
+                  <div class="overlay-data">
+                    <span>Delhi</span>
+                    <p>Sarojani Nagar</p>
                   </div>
-                </a>
+                </div>
               </div>
               <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/3.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
+                <img src="image/hotel/3.avif" alt="" />
+                <div class="package-overlay">
+                  <div class="overlay-data">
+                    <span>Delhi</span>
+                    <p>Nehru Place</p>
                   </div>
-                </a>
-              </div>
-              <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/1.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/2.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/3.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/1.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/2.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
-                  </div>
-                </a>
-              </div>
-              <div class="package-image">
-                <a href="hotels.html">
-                  <img src="image/hotel/3.avif" alt="" />
-                  <div class="package-overlay">
-                    <div class="overlay-data">
-                      <span>Delhi</span>
-                    </div>
-                  </div>
-                </a>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
 
+      <section class="package-details">
+        <div class="package-container">
+          <div class="package-box">
+            <div class="package-img">
+              <img src="image/hotel/1.avif" alt="" />
+            </div>
+            <div class="package-content">
+              <h4>House of Oglodi by Rishi Khanna</h4>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-inr"></i>
+                    <span>5,000</span>
+                  </span>
+                  <span class="package-days">
+                    <i class="fa fa-star-o"></i>
+                    6 Nights and 7 Days</span
+                  >
+                  <span class="diamond">
+                    <i class="fa fa-star"></i>
+                    <span>Ratings</span>
+                  </span>
+                </div>
+                <div class="diamond-box-button">
+                  <a href="bookTheHotel.html">
+                    <button class="btn btn-danger">Book Now</button>
+                  </a>
+                </div>
+              </div>
+              <div class="para">
+                <p>
+                  Delhi is a blend of temples, wildlife, and of amazing
+                  architecture and a place full of enthusiasm and rich in
+                  culture and heritage.
+                </p>
+              </div>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Breakfast</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Lunch</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Dinner</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Transportation</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Parking </span>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="package-img">
+              <img src="image/hotel/2.avif" alt="" />
+            </div>
+            <div class="package-content">
+              <h4>House of Oglodi by Rishi Khanna</h4>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-inr"></i>
+                    <span>10,000</span>
+                  </span>
+                  <span class="package-days">
+                    <i class="fa fa-star-o"></i>
+                    6 Nights and 7 Days</span
+                  >
+                  <span class="diamond">
+                    <i class="fa fa-star"></i>
+                    <span>Ratings</span>
+                  </span>
+                </div>
+                <div class="diamond-box-button">
+                  <button class="btn btn-danger">Book Now</button>
+                </div>
+              </div>
+              <div class="para">
+                <p>
+                  Delhi is a blend of temples, wildlife, and of amazing
+                  architecture and a place full of enthusiasm and rich in
+                  culture and heritage.
+                </p>
+              </div>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Breakfast</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Lunch</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Dinner</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Transportation</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Parking </span>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="package-box">
+            <div class="package-img">
+              <img src="image/hotel/3.avif" alt="" />
+            </div>
+            <div class="package-content">
+              <h4>House of Oglodi by Rishi Khanna</h4>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-inr"></i>
+                    <span>15,000</span>
+                  </span>
+                  <span class="package-days">
+                    <i class="fa fa-star-o"></i>
+                    6 Nights and 7 Days</span
+                  >
+                  <span class="diamond">
+                    <i class="fa fa-star"></i>
+                    <span>Ratings</span>
+                  </span>
+                </div>
+                <div class="diamond-box-button">
+                  <button class="btn btn-danger">Book Now</button>
+                </div>
+              </div>
+              <div class="para">
+                <p>
+                  Delhi is a blend of temples, wildlife, and of amazing
+                  architecture and a place full of enthusiasm and rich in
+                  culture and heritage.
+                </p>
+              </div>
+              <div class="diamond-box-tags">
+                <div class="diamond-box-tags">
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Breakfast</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Lunch</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Dinner</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Transportation</span>
+                  </span>
+                  <span class="diamond">
+                    <i class="fa fa-check"></i>
+                    <span>Parking </span>
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <footer>
         <div class="footer-container">
           <div class="footer-box">
@@ -695,7 +811,6 @@
             </a>
           </div>
         </div>
-        <div></div>
       </footer>
     </div>
     <script
